--- a/site/mod2-sol/index.html
+++ b/site/mod2-sol/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>Module 2 Solution</title>
     <link rel="stylesheet" type="text/css" href="css/index_master.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" >
     <meta name="viewport" content="width=device-width, initial-scale=1" >
