Final Changes Done

--- a/site/mod3-sol/index.html
+++ b/site/mod3-sol/index.html
@@ -15,13 +15,57 @@
 
     <title>Boostrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-    <h1>Hello Coursera!</h1>
-
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <div class="navbar-brand">
+                        <a href="index.html" >
+                            <h1 class="center">FOOD, LLC</h1>
+                        </a>
+                    </div>
+                    <button id="menu-button" type="button" class="center navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-menu"
+                        aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div id="collapsable-menu" class="collapse navbar-collapse">
+                    <ul id="navlist" class="nav navbar-nav visible-xs navbar-right">
+                        <li class="menu-items">Chicken</li><hr class="menu-items-bar">
+                        <li class="menu-items">Beef</li><hr class="menu-items-bar">
+                        <li class="menu-items">Sushi</li><hr class="menu-items-bar">
+                    </ul>
+                </div>
+            </div>            
+        </nav>
+    </header>
+    <div id="main-content" class="container">
+        <h2 class="text-center">Our Menu</h2>
+        <section>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, temporibus possimus vero hic ab, illum ex culpa minus quas quisquam dolor mollitia! Adipisci quod cupiditate facere doloremque nulla ipsa nihil.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nobis nemo sunt odit possimus veniam similique minima ex magni quas maiores non laboriosam labore expedita aliquid, repudiandae enim voluptatem. Quisquam!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nisi alias illo accusamus dignissimos labore, ab ullam tenetur id ipsam quos vitae officia quidem magni? Ea ex expedita incidunt suscipit.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis officiis maiores modi ipsa dolor omnis repellat ut mollitia neque, odit cupiditate deserunt corrupti, hic architecto expedita exercitationem in optio accusamus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos corrupti numquam quis totam molestias veritatis provident dolore debitis exercitationem ab aliquid distinctio obcaecati iure eos ullam quidem, maxime eius aut?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque vero pariatur, veniam aperiam corporis in! Commodi facere sint id, doloribus rem laudantium aut, deleniti laborum illo eveniet ratione soluta modi?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate voluptatem, fugit aliquid totam tempora, alias repellendus ut sapiente, reprehenderit laudantium adipisci modi. Voluptates ad temporibus quae, libero provident labore saepe!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora exercitationem error eius repellendus enim, magni quo repudiandae perferendis quia necessitatibus ea deserunt maxime corporis praesentium, assumenda facilis totam illo animi!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet necessitatibus sed quae est ea corporis voluptas, excepturi natus molestias, dignissimos blanditiis magni iste fugit laboriosam cupiditate veniam? Quia, consectetur architecto.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, magni commodi? Distinctio perferendis corporis eaque excepturi in repudiandae quis maxime aspernatur, quisquam reiciendis sapiente tempore. Blanditiis quos voluptatibus ducimus in.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil necessitatibus laudantium corporis nobis veritatis optio facere rem ratione quo dolorum, nulla vitae suscipit rerum deserunt minima autem modi odit voluptate.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto esse ipsum totam, sit, pariatur omnis ullam unde quasi at id repudiandae culpa aliquid, quod cupiditate? Accusamus repudiandae corporis sed.
+            
+        </section>
+    </div>
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
