Applied grid system to section

--- a/site/mod3-sol/index.html
+++ b/site/mod3-sol/index.html
@@ -50,7 +50,7 @@
     </header>
     <div id="main-content" class="container">
         <h2 class="text-center">Our Menu</h2>
-        <section>
+        <section class="col-xs-12">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, temporibus possimus vero hic ab, illum ex culpa minus quas quisquam dolor mollitia! Adipisci quod cupiditate facere doloremque nulla ipsa nihil.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nobis nemo sunt odit possimus veniam similique minima ex magni quas maiores non laboriosam labore expedita aliquid, repudiandae enim voluptatem. Quisquam!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nisi alias illo accusamus dignissimos labore, ab ullam tenetur id ipsam quos vitae officia quidem magni? Ea ex expedita incidunt suscipit.
